2001-07-17  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch

	* doc/sgml/C/xacc-about.sgml: Matt Krai's doc patch

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/gnome/gnc-dateedit.c: Matt Kraai's date accelerator bug fix

	* src/engine/io-gncbin-r.c: fix bug with price import (use
	posted date, not entered date).

	* src/engine/gnc-pricedb.[ch]: fix bugs with setting currency and
	commodity and with converting from legacy commodities.

	* src/engine/Transaction.c (xaccTransAppendSplit): make sure
	split's value conforms to the transaction common currency.

2001-07-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-register.c: same as below

	* src/scm/report/taxtxf.scm: use split amount

2001-07-13  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/payables.scm: New file - an 
	"Accounts payable by creditor" report.

	* src/scm/date-utilities.scm: Added a couple
	more datedeltas.
	
	* src/scm/Makefile.am: update for new file.

2001-07-12  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.[hc]: same as below

	* src/SplitLedger.c: remove share balance cells, they are now
	redundant

	* accounts/*/*: currency->commodity

	* src/scm/engine-interface.scm: quantity->amount

	* src/guile/guile-util.[ch]: quantity->amount

	* src/guile/gnc.gwp: quantity->amount

	* src/SplitLedger.c: quantity->amount

	* src/gnc-ui-util.[ch]: quantity->amount

	* src/scm/report/transaction.scm: remove old api

	* src/scm/report-utilities.scm: remove old api

	* src/scm/commodity-utilities.scm: remove old api

	* src/scm/engine-interface.scm: remove old api

	* src/scm/extensions.scm: remove old api

	* src/scm/report-utilities.scm: remove old api

	* src/gnome/reconcile-list.c: remove old api

	* src/scm/report/register.scm: remove old api

	* src/engine/Scrub.c: remove old api

	* src/engine/sql/txn.c: remove old api

	* src/engine/rpc/RpcUtils.c: remove old api

	* src/guile/gnc.gwp: remove cruft